[package]
name = "siren"
version = "1.0.0"
edition = "2021"  # ubah ke 2021 (2024 belum stabil)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.28", features = ["io-util", "rt"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
worker = "0.8.3"    # <-- DIUBAH
futures-util = "0.3.28"
pin-project-lite = "0.2"
uuid = { version = "1.8", features = ["v4", "js"] }  # tambah fitur js
bytes = "1.4.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0.86"
reqwest = "0.12.5"
regex = "1.11.1"
once_cell = "1.21.3"
pretty-bytes = "0.2.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
debug = false
